# NIM_Duilib_Framework

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_en-US.md
base/: CMakeLists.txt  base.vcxproj  base.vcxproj.filters  base_config.h  base_export.h  base_types.h  macros.h  port.h
base/callback/: callback.h
base/encrypt/: des.cpp  des.h  encrypt_impl.h
base/file/: file_path.h  file_util.cpp  file_util.h
base/framework/: default_message_pump.cpp  default_message_pump.h  message_loop.cpp  message_loop.h  message_loop_proxy.cpp  message_loop_proxy.h  message_pump.cpp  message_pump.h  observer_list.h  readme.txt  task.h  win_io_message_pump.h  win_message_pump.cpp  win_message_pump.h  win_ui_message_pump.cpp  win_ui_message_pump.h
base/hardware/: cpu.cpp  cpu.h
base/memory/: deleter.h  lazy_instance.h  singleton.h
base/network/: network_util.cpp  network_util.h
base/synchronization/: lock_win.cpp  semaphore_posix.cpp  semaphore_win.cpp  waitable_event.h  waitable_event_posix.cpp  waitable_event_win.cpp
base/thread/: thread_local.h  thread_local_posix.cpp  thread_local_win.cpp  thread_manager.cpp  thread_manager.h
base/time/: time.h  time_win.cpp
base/util/: at_exit.cpp  at_exit.h  callback_unittest.cpp  string_number_conversions.cpp  string_number_conversions.h  string_util.cpp  string_util.h  unicode.h  valuemap.h
base/win32/: object_watcher.cpp  path_util.cpp  path_util.h  platform_string_util.cpp  platform_string_util.h  scoped_win_handle.h  security_util.cpp  security_util.h  shared_memory.cpp  shared_memory.h  win_util.cpp  win_util.h
duilib/: CMakeLists.txt  StdAfx.h  UIlib.cpp  UIlib.h  duilib.vcxproj  duilib.vcxproj.filters
duilib/Animation/: AnimationPlayer.cpp  AnimationPlayer.h
duilib/Automation/: UIABoxProvider.cpp  UIABoxProvider.h  UIAButtonProvider.cpp  UIAButtonProvider.h  UIACheckBoxProvider.cpp  UIACheckBoxProvider.h  UIAComboBoxProvider.cpp  UIAComboBoxProvider.h  UIAControlProvider.cpp  UIAControlProvider.h  UIALabelProvider.cpp  UIALabelProvider.h  UIAListBoxItemProvider.cpp  UIAListBoxItemProvider.h  UIAListBoxProvider.cpp  UIAListBoxProvider.h  UIAProgressProvider.cpp  UIAProgressProvider.h  UIARichEditProvider.cpp  UIARichEditProvider.h  UIAScrollBarProvider.cpp  UIAScrollBarProvider.h  UIAScrollableBoxProvider.cpp  UIAScrollableBoxProvider.h  UIATreeNodeProvider.cpp  UIATreeNodeProvider.h  UIAWindowProvider.cpp  UIAWindowProvider.h
duilib/Box/: ChildBox.cpp  ChildBox.h  HBox.cpp  HBox.h  TabBox.cpp  TabBox.h  TileBox.cpp  TileBox.h  VBox.cpp  VBox.h
duilib/Control/: Button.h  ButtonImpl.h  CheckBox.h  CheckBoxImpl.h  CheckCombo.cpp  CheckCombo.h  CircleProgress.cpp  CircleProgress.h  Combo.cpp  Combo.h  Label.h  LabelImpl.h  List.cpp  List.h  Menu.cpp  Menu.h  Option.h  OptionImpl.h  Progress.cpp  Progress.h  RichEdit.cpp  RichEdit.h  ScrollBar.cpp  ScrollBar.h  Slider.cpp  Slider.h  TreeView.cpp  TreeView.h  VirtualListBox.cpp  VirtualListBox.h  VirtualTileBox.cpp  VirtualTileBox.h
duilib/Core/: Box.cpp  Box.h  Control.cpp  Control.h  Define.cpp  Define.h  GlobalManager.cpp  GlobalManager.h  Image.cpp  Image.h  Markup.cpp  Placeholder.cpp  Placeholder.h  Render.cpp  Render.h  Window.cpp  Window.h  WindowBuilder.cpp  WindowBuilder.h
duilib/Decoder/: nanosvgrast.h
duilib/Render/: Bitmap.cpp  Bitmap.h  Brush.h  Factory.cpp  IRender.cpp  IRender.h  Matrix.cpp  Path.h  Pen.h  Render.cpp  Render.h  nanosvgrast.h
duilib/Utils/: ApiWrapper.cpp  ApiWrapper.h  BoxShadow.cpp  BoxShadow.h  Delegate.h  DpiManager.cpp  DpiManager.h  FontManager.cpp  FontManager.h  GdiHepler.cpp  GdiHepler.h  Macros.h  MultiLangSupport.cpp  MultiLangSupport.h  OnScreenKeyboardManager.cpp  OnScreenKeyboardManager.h  Shadow.cpp  Shadow.h  StringUtil.cpp  StringUtil.h  SvgUtil.cpp  SvgUtil.h  TimerManager.cpp  TimerManager.h  UnZip.cpp  Utils.h  VersionHelpers.h  WinImplBase.cpp  WinImplBase.h  flash11.tlh
examples/basic/: CMakeLists.txt  basic.rc  basic.vcxproj  basic_form.h  main.cpp  resource.h  stdafx.h
ui_components/: CMakeLists.txt  public_define.h  stdafx.h  targetver.h  ui_components.h  ui_components.vcxproj  ui_components.vcxproj.filters
ui_components/cef_control/app/: cef_js_bridge.cpp  cef_js_bridge.h  client_app.cpp  client_app.h  client_app_browser.cpp  client_app_render.cpp  (+3 more)
ui_components/comboex/: CheckCombo.cpp  CheckCombo.h  FilterCombo.cpp  FilterCombo.h  ShadowCombo.cpp  ShadowCombo.h
ui_components/grid/: Grid.cpp  Grid.h  GridBase.cpp  GridBase.h  GridBody.cpp  GridBody.h
ui_components/menu/: observer_impl_base.hpp  ui_menu.cpp  ui_menu.h
ui_components/mini_blink_control/: web_view_base.cpp  web_view_base.h  wke_memory_dc.cpp  wke_memory_dc.h  wke_web_native.cpp  wke_web_native.h  wke_web_view.cpp  wke_web_view.h
ui_components/modal_wnd/: async_do_modal.cpp  async_do_modal.h  async_modal_runner.cpp  async_modal_runner.h  file_dialog_ex.cpp  file_dialog_ex.h  modal_wnd_base.h
ui_components/msgbox/: msgbox.cpp  msgbox.h
ui_components/popover/: alert.cpp  alert.h  notification.cpp  notification.h  popover.cpp  popover.h  tooltip.cpp  tooltip.h
ui_components/shadow_wnd/: shadow_wnd.cpp  shadow_wnd.h
ui_components/toast/: toast.cpp  toast.h
ui_components/windows_manager/: window_ex.cpp  window_ex.h  windows_manager.cpp  windows_manager.h
(+514 files in other folders)
